--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="main.css">
     <title>Peter Brennan | Developer</title>
 </head>
 <body>
-    <header>
+    <header class="main-header">
         <h1>Activity: Basic Student Bio</h1>
     </header>
     
@@ -17,6 +18,7 @@
     <section>
         <h3>Peter Brennan</h3>
         <img 
+            id="my-pic"
             height="auto"
             width="300px"
             src="./files/profile.png"
