--- a/index.html
+++ b/index.html
@@ -4,35 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="styles.css">
     <title>Peter Brennan | Developer</title>
 </head>
 <body>
-    <header class="main-header">
-        <h1>Activity: Basic Student Bio</h1>
+    <header>
+        <h1>Student Bio</h1>
     </header>
     
-    <br>
-    <h2>Student Bio</h2>
+    <div class="container">
 
-    <section>
-        <h3>Peter Brennan</h3>
-        <img 
-            id="my-pic"
-            height="auto"
-            width="300px"
-            src="./files/profile.png"
-            alt="Profile Image"
-        />
-        <p>Hi, I'm currently learning the art of programming :)</p>
-    </section>
+        <section id="my-bio">
+            <h2>Peter Brennan</h2>
+            <img 
+                id="bio-image"
+                height="auto"
+                width="300px"
+                src="./files/profile.png"
+                alt="Profile Image"
+            />
+            <p>Hi, I'm currently learning the art of programming :)</p>
+        </section>
 
-    <h2>Contact Info</h2>
-    <ul>
-        <li><strong>Email:</strong> <a href="#"> peter@agcorp.com.au</a></li>
-        <li><a href="https://github.com/Pete331"> <strong>GitHub</strong></a></li>
-        <li><strong>Portfolio:</strong> <a href="#"> Coming Soon</a></li>
-    </ul>
-    
+        <section id="contact-info">
+            <h2>Contact Info</h2>
+            <ul>
+                <li><strong>Email:</strong> <a href="#"> peter@agcorp.com.au</a></li>
+                <li><a href="https://github.com/Pete331"> <strong>GitHub</strong></a></li>
+                <li><strong>Portfolio:</strong> <a href="#"> Coming Soon</a></li>
+            </ul>
+        </section>
+    </div>
 </body>
 </html>
