--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- reset.css creates spacing/formatting error
+    <link rel="stylesheet" href="reset.css">  -->
     <link rel="stylesheet" href="styles.css">
     <link rel="shortcut icon" type="image/png" href="./files/favicon.png" />
     <title>Peter Brennan | Developer</title>
@@ -30,8 +32,8 @@
         <section id="contact-info">
             <h2>Contact Info</h2>
             <ul>
-                <li><strong>Email:</strong> <a href="#"> peter@agcorp.com.au</a></li>
-                <li><a href="https://github.com/Pete331"> <strong>GitHub</strong></a></li>
+                <li><strong>Email:</strong> <a href="mailto:peter@agcorp.com.au?subject=Contact from webpage&body=Hi Peter,"> peter@agcorp.com.au</a></li>
+                <li><a href="https://github.com/Pete331" target="_blank"> <strong>GitHub</strong></a></li>
                 <li><strong>Portfolio:</strong> <a href="#"> Coming Soon</a></li>
             </ul>
         </section>
