--- a/index.html
+++ b/index.html
@@ -1,40 +1,97 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style/style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./style/style.css" />
     <link rel="shortcut icon" type="image/png" href="./files/favicon.png" />
     <title>Peter Brennan | Developer</title>
-</head>
-<body>
-    <header>
-        <h1>Student Bio</h1>
-    </header>
-    
+  </head>
+  <body>
+    <!-- <header>    </header> -->
     <div class="container">
-
-        <section id="my-bio">
-            <h2>Peter Brennan</h2>
-            <img 
-                id="bio-image"
-                height="auto"
-                width="300px"
-                src="./files/profile.png"
-                alt="Profile Image"
-            />
-            <p>Hi, I'm currently learning the art of programming :)</p>
-        </section>
-
-        <section id="contact-info">
-            <h2>Contact Info</h2>
-            <ul>
-                <li><strong>Email:</strong> <a href="#"> peter@agcorp.com.au</a></li>
-                <li><a href="https://github.com/Pete331"> <strong>GitHub</strong></a></li>
-                <li><strong>Portfolio:</strong> <a href="#"> Coming Soon</a></li>
+      <div class="row">
+            <div class="col-lg-12">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+          <a class="navbar-brand" href="#">Peter Brennan</a>
+          <!-- <button
+            class="navbar-toggler"
+            type="button"
+            data-toggle="collapse"
+            data-target="#navbarNav"
+            aria-controls="navbarNav"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          > -->
+            <!-- <span class="navbar-toggler-icon"></span> -->
+          <!-- </button> -->
+          <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+            <ul class="nav">
+              <!-- <li class="nav-item active">
+                <a class="nav-link" href="#"
+                  >Home <span class="sr-only">(current)</span></a
+                >
+              </li> -->
+              <li class="nav-item">
+                <a class="nav-link" href="#">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Portfolio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Contact</a>
+              </li>
+  
             </ul>
-        </section>
+          </div>
+        </div>
+        </nav>
+      </div>
+
+      <section id="my-bio">
+        <img
+          id="bio-image"
+          height="auto"
+          width="300px"
+          src="./files/profile.png"
+          alt="Profile Image"
+        />
+        <p>Hi, I'm currently learning the art of programming :)</p>
+      </section>
+
+      <section id="contact-info">
+        <h2>Contact Info</h2>
+        <ul>
+          <li><strong>Email:</strong> <a href="#"> peter@agcorp.com.au</a></li>
+          <li>
+            <a href="https://github.com/Pete331"> <strong>GitHub</strong></a>
+          </li>
+          <li><strong>Portfolio:</strong> <a href="#"> Coming Soon</a></li>
+        </ul>
+      </section>
     </div>
-</body>
+
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
