added header to each file

--- a/contact.html
+++ b/contact.html
@@ -14,60 +14,64 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style/style.css" />
+    <link rel="shortcut icon" type="image/png" href="./files/favicon.png" />
     <title>Peter Brennan | Contact</title>
   </head>
   <body>
+    <header class="border-bottom border-dark mb-3">
+      <!-- Menu hides when smaller than 768px -->
+      <div class="row">
+        <div class="col-md-3 d-none d-md-block bg-info navbar ">
+          <div class="text-center text-light" id="name">Peter Brennan</div>
+        </div>
+        <div class="col-md-9 d-none d-md-block bg-white">
+          <div class="nav justify-content-end">
+            <ul class="nav " id="navbar1">
+              <li class="nav-item">
+                <a class="nav-link text-muted active" href="./index.html"
+                  >About</a
+                >
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link text-muted" href="./porfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-muted" href="./contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- Menu shows when smaller than 768px -->
+      <div class="">
+        <div class="row d-md-none">
+          <div class="col-lg-12 text-center navbar-brand bg-info text-light ">
+            Peter Brennan
+          </div>
+        </div>
+        <div class="nav d-md-none">
+          <div class="col-lg-12 bg-white">
+            <ul class="nav justify-content-center" id="navbar1">
+              <li class="nav-item">
+                <a class="nav-link text-muted" href="./index.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-muted" href="./porfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-muted" href="./contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
     <div class="container">
-      <header class="border-bottom border-dark mb-3">
-        <!-- Menu hides when smaller than 768px -->
-        <div class="row">
-          <div class="col-md-3 d-none d-md-block bg-info navbar ">
-            <div class="text-center text-light" id="name">Peter Brennan</div>
-          </div>
-          <div class="col-md-9 d-none d-md-block bg-white">
-            <div class="nav justify-content-end">
-              <ul class="nav " id="navbar1">
-                <li class="nav-item">
-                  <a class="nav-link text-muted active" href="./index.html"
-                    >About</a
-                  >
-                </li>
-                <li class="nav-item ">
-                  <a class="nav-link text-muted" href="./porfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-muted" href="./contact.html">Contact</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-        <!-- Menu shows when smaller than 768px -->
-        <div class="">
-          <div class="row d-md-none">
-            <div class="col-lg-12 text-center navbar-brand bg-info text-light ">
-              Peter Brennan
-            </div>
-          </div>
-          <div class="nav d-md-none">
-            <div class="col-lg-12 bg-white">
-              <ul class="nav justify-content-center" id="navbar1">
-                <li class="nav-item">
-                  <a class="nav-link text-muted" href="./index.html">About</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-muted" href="./porfolio.html">Portfolio</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link text-muted" href="./contact.html">Contact</a>
-                </li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </header>
-
       <div class="row bg-white border border-secondary">
         <div class="col-sm-12 p-4">
           <h1 class="text-info">Contact</h1>
