--- a/porfolio.html
+++ b/porfolio.html
@@ -4,48 +4,80 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
+      href="https://fonts.googleapis.com/css?family=PT+Serif&display=swap"
+      rel="stylesheet"
+    />
+    <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
       integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./style/style.css" />
+    <link rel="shortcut icon" type="image/png" href="./files/favicon.png" />
     <title>Peter Brennan | Portfolio</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row ">
-        <div class="col-lg-12 ">
-          <div class="navbar d-none d-lg-block d-xl-block">
-            <div class="navbar-brand ">Peter Brennan</div>
-            <div class="navbar justify-content-end">
-          <ul class="nav" id="navbar1">
-            <li class="nav-item">
-              <a class="nav-link active" href="./index.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./porfolio.html">Portfolio</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="./contact.html">Contact</a>
-            </li>
-            <!-- <li class="nav-item">
-                <a
-                  class="nav-link disabled"
-                  href="#"
-                  tabindex="-1"
-                  aria-disabled="true"
-                  >Disabled</a
-                >
-              </li> -->
-          </ul>
+    <header class="border-bottom border-dark mb-3">
+      <!-- Menu hides when smaller than 768px -->
+      <div class="row">
+        <div class="col-md-3 d-none d-md-block bg-info navbar ">
+          <div class="text-center text-light" id="name">Peter Brennan</div>
         </div>
-    </div>
+        <div class="col-md-9 d-none d-md-block bg-white">
+          <div class="nav justify-content-end">
+            <ul class="nav " id="navbar1">
+              <li class="nav-item">
+                <a class="nav-link text-muted active" href="./index.html"
+                  >About</a
+                >
+              </li>
+              <li class="nav-item ">
+                <a class="nav-link text-muted" href="./porfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-muted" href="./contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+
+      <!-- Menu shows when smaller than 768px -->
+      <div class="">
+        <div class="row d-md-none">
+          <div class="col-lg-12 text-center navbar-brand bg-info text-light ">
+            Peter Brennan
+          </div>
+        </div>
+        <div class="nav d-md-none">
+          <div class="col-lg-12 bg-white">
+            <ul class="nav justify-content-center" id="navbar1">
+              <li class="nav-item">
+                <a class="nav-link text-muted" href="./index.html">About</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-muted" href="./porfolio.html"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="nav-item">
+                <a class="nav-link text-muted" href="./contact.html">Contact</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </header>
+    <div class="container">
+      <div class="row bg-white border border-secondary">
+        <div class="col-sm-12 p-4">
+          <h1 class="text-info">Portfolio</h1>
+        </div>
       </div>
     </div>
-
-    <h1>Portfolio</h1>
-
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
