--- a/contact.html
+++ b/contact.html
@@ -18,10 +18,10 @@
     <title>Peter Brennan | Contact</title>
   </head>
   <body>
-    <header class="border-bottom border-dark mb-3">
+    <header class="border-bottom border-dark mb-3 sticky-top">
       <!-- Menu hides when smaller than 768px -->
       <div class="row">
-        <div class="col-md-3 d-none d-md-block bg-info navbar ">
+        <div class="col-md-3 d-none d-md-block bg-info navbar">
           <div class="text-center text-light" id="name">Peter Brennan</div>
         </div>
         <div class="col-md-9 d-none d-md-block bg-white">
@@ -46,7 +46,7 @@
       </div>
 
       <!-- Menu shows when smaller than 768px -->
-      <div class="">
+      <div class="row">
         <div class="row d-md-none">
           <div class="col-lg-12 text-center navbar-brand bg-info text-light ">
             Peter Brennan
@@ -74,8 +74,9 @@
     <div class="container">
       <div class="row bg-white border border-secondary">
         <div class="col-sm-12 p-4">
-          <h1 class="text-info">Contact</h1>
-
+          <div class="border-bottom border-secondary mb-3">
+            <h1 class="text-info">Contact</h1>
+          </div>
           <form>
             <div class="form-group">
               <label for="name">Name</label>
@@ -106,6 +107,9 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <div class="footer-copyright sticky-bottom text-light text-center bg-secondary py-3 border-3 mt-3">© 2020 Copyright - Peter Brennan</div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
