--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Peter Brennan | Developer</title>
   </head>
   <body>
-    <header class="border-bottom border-dark mb-3">
+    <header class="border-bottom border-dark mb-3 sticky-top">
       <!-- Menu hides when smaller than 768px -->
       <div class="row">
         <div class="col-md-3 d-none d-md-block bg-info navbar ">
@@ -74,8 +74,12 @@
     <div class="container">
       <div class="row bg-white border border-secondary">
         <div class="col-sm-12 p-4">
+          <div class="border-bottom border-secondary mb-3">
+            <h1 class="text-info">About Me</h1>
+          </div>
           <section id="my-bio">
             <img
+              class="rounded img-fluid mx-auto mx-md-0 d-block"
               id="bio-image"
               height="auto"
               width="300px"
@@ -102,6 +106,13 @@
         </div>
       </div>
     </div>
+    <footer class="footer">
+      <div
+        class="footer-copyright sticky-bottom text-light text-center bg-secondary py-3 border-3 mt-3"
+      >
+        © 2020 Copyright - Peter Brennan
+      </div>
+    </footer>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
