added portfolio cards and links etc

--- a/porfolio.html
+++ b/porfolio.html
@@ -77,11 +77,72 @@
           <div class="border-bottom border-secondary mb-3">
             <h1 class="text-info">Portfolio</h1>
           </div>
+
+          <div class="container-fluid mt-4">
+            <div class="row justify-content-center">
+  
+              <div class="col-auto mb-3">
+                <div class="card" style="width: 22rem;">
+                  <img
+                    src="./files/Heriseon.PNG"
+                    class="card-img-top"
+                    alt="Heriseon"
+                    style="height: 17rem;"/>
+                    <a href="https://pete331.github.io/Week-1---Heroseon/" target=”_blank”>
+                  <div class="row card-img-overlay">
+                    <h5 class="col-12 align-self-center card-title bg-info text-white text-center p-3">Heriseon</h5>
+                  </div>
+                  <div class="card card-body">
+                    <a href="https://github.com/Pete331/Week-1---Heroseon" target=”_blank” class="card-link">Github</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-auto mb-3">
+                <div class="card" style="width: 22rem;">
+                  <img
+                    src="./files/facedetector.PNG"
+                    class="card-img-top"
+                    alt="face detector"
+                    style="height: 17rem;"/>
+                    <a href="https://smart-brain331.herokuapp.com/" target=”_blank”>
+                  <div class="row card-img-overlay">
+                    <h5 class="col-12 align-self-center card-title bg-info text-white text-center p-3">Face Detector</h5>
+                  </div>
+                  <div class="card card-body">
+                    <a href="https://github.com/Pete331/smart-brain-api" target=”_blank” class="card-link">Github</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-auto mb-3">
+                <div class="card" style="width: 22rem;">
+                  <img
+                    src="./files/Robofriends.PNG"
+                    class="card-img-top"
+                    alt="robofriends"
+                    style="height: 17rem;"/>
+                    <a href="https://pete331.github.io/robofriends/" target=”_blank”>
+                  <div class="row card-img-overlay">
+                    <h5 class="col-12 align-self-center card-title bg-info text-white text-center p-3">Robofriends</h5>
+                  </div>
+                  <div class="card card-body">
+                    <a href="https://github.com/Pete331/robofriend" target=”_blank” class="card-link">Github</a>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
+
     <footer class="footer">
-      <div class="footer-copyright sticky-bottom text-light text-center bg-secondary py-3 border-3 mt-3">© 2020 Copyright - Peter Brennan</div>
+      <div
+        class="footer-copyright sticky-bottom text-light text-center bg-secondary py-3 border-3 mt-3"
+      >
+        © 2020 Copyright - Peter Brennan
+      </div>
     </footer>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
