cleaned up code & added bio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
         <div class="col-md-9 d-none d-md-block bg-white">
           <div class="nav justify-content-end">
-            <ul class="nav " id="navbar1">
+            <ul class="nav">
               <li class="nav-item">
                 <a class="nav-link text-muted active" href="./index.html"
                   >About</a
@@ -54,7 +54,7 @@
         </div>
         <div class="nav d-md-none">
           <div class="col-lg-12 bg-white">
-            <ul class="nav justify-content-center" id="navbar1">
+            <ul class="nav justify-content-center">
               <li class="nav-item">
                 <a class="nav-link text-muted" href="./index.html">About</a>
               </li>
@@ -71,13 +71,14 @@
         </div>
       </div>
     </header>
+
     <div class="container">
       <div class="row bg-white border border-secondary">
         <div class="col-sm-12 p-4">
           <div class="border-bottom border-secondary mb-3">
             <h1 class="text-info">About Me</h1>
           </div>
-          <section id="my-bio">
+          <section class="d-md-inline-flex">
             <img
               class="rounded img-fluid mx-auto mx-md-0 d-block"
               id="bio-image"
@@ -86,22 +87,27 @@
               src="./files/profile.png"
               alt="Profile Image"
             />
-            <p>Hi, I'm currently learning the art of programming :)</p>
+            <p class="p-3">
+              I grew up on our family farm in Wongan Hills, developing a love
+              and passion for agriculture and technology. After completing a
+              Bachelor of Science in Agriculture and a Bachelor of Commerce at
+              UWA, I spent several years working on our family farm. I have
+              spent a couple of years with NAB agribusiness gaining experience
+              in the banking sector being exposed to different ag industries. I
+              am currently working at Grain Brokers Australia and am looking to
+              further my interest in programming. To be continued….. and fleshed
+              out
+            </p>
           </section>
 
           <section id="contact-info">
-            <h2>Contact Info</h2>
-            <ul>
-              <li>
-                <strong>Email:</strong> <a href="#"> peter@agcorp.com.au</a>
-              </li>
-              <li>
-                <a href="https://github.com/Pete331">
-                  <strong>GitHub</strong></a
-                >
-              </li>
-              <li><strong>Portfolio:</strong> <a href="#"> Coming Soon</a></li>
-            </ul>
+            <a href="https://github.com/Pete331" target="_blank"
+              ><img
+                src="./files/github.svg"
+                alt="github"
+                width="50px"
+                height="auto"
+            /></a>
           </section>
         </div>
       </div>
