--- a/porfolio.html
+++ b/porfolio.html
@@ -26,7 +26,7 @@
         </div>
         <div class="col-md-9 d-none d-md-block bg-white">
           <div class="nav justify-content-end">
-            <ul class="nav " id="navbar1">
+            <ul class="nav">
               <li class="nav-item">
                 <a class="nav-link text-muted active" href="./index.html"
                   >About</a
@@ -54,7 +54,7 @@
         </div>
         <div class="nav d-md-none">
           <div class="col-lg-12 bg-white">
-            <ul class="nav justify-content-center" id="navbar1">
+            <ul class="nav justify-content-center">
               <li class="nav-item">
                 <a class="nav-link text-muted" href="./index.html">About</a>
               </li>
@@ -71,6 +71,7 @@
         </div>
       </div>
     </header>
+
     <div class="container">
       <div class="row bg-white border border-secondary">
         <div class="col-sm-12 p-4">
@@ -131,6 +132,58 @@
                   </div>
                 </div>
               </div>
+
+              <div class="col-auto mb-3">
+                <div class="card" style="width: 22rem;">
+                  <img
+                    src="./files/filename.PNG"
+                    class="card-img-top"
+                    alt="Project 4"
+                    style="height: 17rem;"/>
+                    <a href="#" target=”_blank”>
+                  <div class="row card-img-overlay">
+                    <h5 class="col-12 align-self-center card-title bg-info text-white text-center p-3">Project 4</h5>
+                  </div>
+                  <div class="card card-body">
+                    <a href="#" target=”_blank” class="card-link">Github</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-auto mb-3">
+                <div class="card" style="width: 22rem;">
+                  <img
+                    src="./files/filename.PNG"
+                    class="card-img-top"
+                    alt="Project 5"
+                    style="height: 17rem;"/>
+                    <a href="#" target=”_blank”>
+                  <div class="row card-img-overlay">
+                    <h5 class="col-12 align-self-center card-title bg-info text-white text-center p-3">Project 5</h5>
+                  </div>
+                  <div class="card card-body">
+                    <a href="#" target=”_blank” class="card-link">Github</a>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-auto mb-3">
+                <div class="card" style="width: 22rem;">
+                  <img
+                    src="./files/filename.PNG"
+                    class="card-img-top"
+                    alt="Project 6"
+                    style="height: 17rem;"/>
+                    <a href="#" target=”_blank”>
+                  <div class="row card-img-overlay">
+                    <h5 class="col-12 align-self-center card-title bg-info text-white text-center p-3">Project 6</h5>
+                  </div>
+                  <div class="card card-body">
+                    <a href="#" target=”_blank” class="card-link">Github</a>
+                  </div>
+                </div>
+              </div>
+
             </div>
           </div>
         </div>
