--- a/contact.html
+++ b/contact.html
@@ -21,12 +21,12 @@
     <header class="border-bottom border-dark mb-3 sticky-top">
       <!-- Menu hides when smaller than 768px -->
       <div class="row">
-        <div class="col-md-3 d-none d-md-block bg-info navbar">
+        <div class="col-md-3 d-none d-md-block bg-info navbar ">
           <div class="text-center text-light" id="name">Peter Brennan</div>
         </div>
         <div class="col-md-9 d-none d-md-block bg-white">
           <div class="nav justify-content-end">
-            <ul class="nav " id="navbar1">
+            <ul class="nav ">
               <li class="nav-item">
                 <a class="nav-link text-muted active" href="./index.html"
                   >About</a
@@ -46,7 +46,7 @@
       </div>
 
       <!-- Menu shows when smaller than 768px -->
-      <div class="row">
+      <div class="">
         <div class="row d-md-none">
           <div class="col-lg-12 text-center navbar-brand bg-info text-light ">
             Peter Brennan
@@ -54,7 +54,7 @@
         </div>
         <div class="nav d-md-none">
           <div class="col-lg-12 bg-white">
-            <ul class="nav justify-content-center" id="navbar1">
+            <ul class="nav justify-content-center">
               <li class="nav-item">
                 <a class="nav-link text-muted" href="./index.html">About</a>
               </li>
@@ -71,17 +71,20 @@
         </div>
       </div>
     </header>
+
     <div class="container">
       <div class="row bg-white border border-secondary">
         <div class="col-sm-12 p-4">
           <div class="border-bottom border-secondary mb-3">
             <h1 class="text-info">Contact</h1>
           </div>
-          <form>
+
+<!-- Probably use a mailchimp/wordpress code snippet form - or link with javascript&PHP to send directly from website -->
+          <form action="mailto:peter@agcorp.com.au" method="GET">
             <div class="form-group">
               <label for="name">Name</label>
               <input
-                type="name"
+                name="subject"
                 class="form-control"
                 id="name"
                 aria-describedby="nameHelp"
@@ -100,10 +103,12 @@
             </div>
             <div class="form-group">
               <label for="message">Message</label>
-              <textarea class="form-control" id="message" rows="5"></textarea>
+              
+              <textarea class="form-control" name="body" id="message" rows="5"></textarea>
             </div>
-            <button type="submit" class="btn btn-info">Submit</button>
+            <button type="submit" value="send" class="btn btn-info">Submit</button>
           </form>
+
         </div>
       </div>
     </div>
