finally got my footer properly sticky

--- a/index.html
+++ b/index.html
@@ -112,13 +112,17 @@
         </div>
       </div>
     </div>
+
+
+
     <footer class="footer">
       <div
-        class="footer-copyright sticky-bottom text-light text-center bg-secondary py-3 border-3 mt-3"
+        class="text-light text-center bg-secondary py-3 border-3 mt-3"
       >
         © 2020 Copyright - Peter Brennan
       </div>
     </footer>
+
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
       integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
