--- a/contact.html
+++ b/contact.html
@@ -79,7 +79,7 @@
             <h1 class="text-info">Contact</h1>
           </div>
 
-<!-- Probably use a mailchimp/wordpress code snippet form - or link with javascript&PHP to send directly from website -->
+          <!-- Probably use a mailchimp/wordpress code snippet form - or link with javascript&PHP to send directly from website -->
           <form action="mailto:peter@agcorp.com.au" method="GET">
             <div class="form-group">
               <label for="name">Name</label>
@@ -103,17 +103,25 @@
             </div>
             <div class="form-group">
               <label for="message">Message</label>
-              
-              <textarea class="form-control" name="body" id="message" rows="5"></textarea>
-            </div>
-            <button type="submit" value="send" class="btn btn-info">Submit</button>
-          </form>
 
+              <textarea
+                class="form-control"
+                name="body"
+                id="message"
+                rows="5"
+              ></textarea>
+            </div>
+            <button type="submit" value="send" class="btn btn-info">
+              Submit
+            </button>
+          </form>
         </div>
       </div>
     </div>
     <footer class="footer">
-      <div class="footer-copyright sticky-bottom text-light text-center bg-secondary py-3 border-3 mt-3">© 2020 Copyright - Peter Brennan</div>
+      <div class="text-light text-center bg-secondary py-3 border-3 mt-3">
+        © 2020 Copyright - Peter Brennan
+      </div>
     </footer>
     <script
       src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
