--- a/porfolio.html
+++ b/porfolio.html
@@ -192,7 +192,7 @@
 
     <footer class="footer">
       <div
-        class="footer-copyright sticky-bottom text-light text-center bg-secondary py-3 border-3 mt-3"
+        class="text-light text-center bg-secondary py-3 border-3 mt-3"
       >
         © 2020 Copyright - Peter Brennan
       </div>
