--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <header class="border-bottom border-dark mb-3 sticky-top">
       <!-- Menu hides when smaller than 768px -->
       <div class="row">
-        <div class="col-md-3 d-none d-md-block bg-info navbar ">
+        <div class="col-md-3 d-none d-md-block bg-info">
           <div class="text-center text-light" id="name">Peter Brennan</div>
         </div>
         <div class="col-md-9 d-none d-md-block bg-white">
@@ -46,13 +46,12 @@
       </div>
 
       <!-- Menu shows when smaller than 768px -->
-      <div class="">
-        <div class="row d-md-none">
+      <div>
+        <div class=" d-md-none">
           <div class="col-lg-12 text-center navbar-brand bg-info text-light ">
             Peter Brennan
           </div>
-        </div>
-        <div class="nav d-md-none">
+
           <div class="col-lg-12 bg-white">
             <ul class="nav justify-content-center">
               <li class="nav-item">
@@ -113,12 +112,8 @@
       </div>
     </div>
 
-
-
     <footer class="footer">
-      <div
-        class="text-light text-center bg-secondary py-3 border-3 mt-3"
-      >
+      <div class="text-light text-center bg-secondary py-3 border-3 mt-3">
         © 2020 Copyright - Peter Brennan
       </div>
     </footer>
