added portfolio content

--- a/index.html
+++ b/index.html
@@ -124,15 +124,66 @@
               <div class="row justify-content-center">
 
                 <div class="col-auto mb-3">
-                  <div class="card" style="width: 22rem;">
+                  <div class="card" >
+                    <img
+                      src="./files/stock-generator.PNG"
+                      class="card-img-top"
+                      alt="stock-generator"
+                      />
+                      <a href="https://mitchelle-b.github.io/Asset-Portfolio-Generator/" target=”_blank”>
+                    <div class="row card-img-overlay">
+                      <h5 class="col-12 align-self-center bg-info text-white text-center p-2">Asset Portfolio Generator</h5>
+                    </div>
+                    <div class="card card-body">
+                      <a href="https://github.com/Mitchelle-B/Asset-Portfolio-Generator" target=”_blank” class="card-link">Github</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-auto mb-3">
+                  <div class="card" >
+                    <img
+                      src="./files/weather.PNG"
+                      class="card-img-top"
+                      alt="weather"
+                      />
+                      <a href="https://pete331.github.io/Weather-Dashboard/" target=”_blank”>
+                    <div class="row card-img-overlay">
+                      <h5 class="col-12 align-self-center bg-info text-white text-center p-2">Weather Dashboard</h5>
+                    </div>
+                    <div class="card card-body">
+                      <a href="https://github.com/Pete331/Weather-Dashboard" target=”_blank” class="card-link">Github</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-auto mb-3">
+                  <div class="card" >
+                    <img
+                      src="./files/Scheduler.PNG"
+                      class="card-img-top"
+                      alt="scheduler"
+                      />
+                      <a href="https://pete331.github.io/Day-Scheduler/" target=”_blank”>
+                    <div class="row card-img-overlay">
+                      <h5 class="col-12 align-self-center bg-info text-white text-center p-2">Work Day Scheduler</h5>
+                    </div>
+                    <div class="card card-body">
+                      <a href="https://github.com/Pete331/Day-Scheduler" target=”_blank” class="card-link">Github</a>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="col-auto mb-3">
+                  <div class="card">
                     <img
                       src="./files/Heriseon.PNG"
                       class="card-img-top"
                       alt="Heriseon"
-                      style="height: 17rem;"/>
+                      />
                       <a href="https://pete331.github.io/Week-1---Heroseon/" target=”_blank”>
                     <div class="row card-img-overlay">
-                      <h5 class="col-12 align-self-center card-title bg-info text-white text-center p-3">Heriseon</h5>
+                      <h5 class="col-12 align-self-center bg-info text-white text-center p-2">Heriseon</h5>
                     </div>
                     <div class="card card-body">
                       <a href="https://github.com/Pete331/Week-1---Heroseon" target=”_blank” class="card-link">Github</a>
@@ -141,90 +192,38 @@
                 </div>
   
                 <div class="col-auto mb-3">
-                  <div class="card" style="width: 22rem;">
+                  <div class="card">
                     <img
                       src="./files/facedetector.PNG"
                       class="card-img-top"
                       alt="face detector"
-                      style="height: 17rem;"/>
+                      />
                       <a href="https://smart-brain331.herokuapp.com/" target=”_blank”>
                     <div class="row card-img-overlay">
-                      <h5 class="col-12 align-self-center card-title bg-info text-white text-center p-3">Face Detector</h5>
+                      <h5 class="col-12 align-self-center bg-info text-white text-center p-2">Face Detector</h5>
                     </div>
                     <div class="card card-body">
-                      <a href="https://github.com/Pete331/smart-brain-api" target=”_blank” class="card-link">Github</a>
+                      <a href="https://github.com/Pete331/smart-brain" target=”_blank” class="card-link">Github</a>
                     </div>
                   </div>
                 </div>
   
                 <div class="col-auto mb-3">
-                  <div class="card" style="width: 22rem;">
+                  <div class="card" >
                     <img
                       src="./files/Robofriends.PNG"
                       class="card-img-top"
                       alt="robofriends"
-                      style="height: 17rem;"/>
+                      />
                       <a href="https://pete331.github.io/robofriends/" target=”_blank”>
                     <div class="row card-img-overlay">
-                      <h5 class="col-12 align-self-center card-title bg-info text-white text-center p-3">Robofriends</h5>
+                      <h5 class="col-12 align-self-center bg-info text-white text-center p-2">Robofriends</h5>
                     </div>
                     <div class="card card-body">
-                      <a href="https://github.com/Pete331/robofriend" target=”_blank” class="card-link">Github</a>
+                      <a href="https://github.com/Pete331/robofriends" target=”_blank” class="card-link">Github</a>
                     </div>
                   </div>
                 </div>
-  
-                <div class="col-auto mb-3">
-                  <div class="card" style="width: 22rem;">
-                    <img
-                      src=""
-                      class="card-img-top"
-                      alt="Project 4"
-                      style="height: 17rem;"/>
-                      <a href="#" target=”_blank”>
-                    <div class="row card-img-overlay">
-                      <h5 class="col-12 align-self-center card-title bg-info text-white text-center p-3">Project 4</h5>
-                    </div>
-                    <div class="card card-body">
-                      <a href="#" target=”_blank” class="card-link">Github</a>
-                    </div>
-                  </div>
-                </div>
-  
-                <div class="col-auto mb-3">
-                  <div class="card" style="width: 22rem;">
-                    <img
-                      src=""
-                      class="card-img-top"
-                      alt="Project 5"
-                      style="height: 17rem;"/>
-                      <a href="#" target=”_blank”>
-                    <div class="row card-img-overlay">
-                      <h5 class="col-12 align-self-center card-title bg-info text-white text-center p-3">Project 5</h5>
-                    </div>
-                    <div class="card card-body">
-                      <a href="#" target=”_blank” class="card-link">Github</a>
-                    </div>
-                  </div>
-                </div>
-  
-                <div class="col-auto mb-3">
-                  <div class="card" style="width: 22rem;">
-                    <img
-                      src=""
-                      class="card-img-top"
-                      alt="Project 6"
-                      style="height: 17rem;"/>
-                      <a href="#" target=”_blank”>
-                    <div class="row card-img-overlay">
-                      <h5 class="col-12 align-self-center card-title bg-info text-white text-center p-3">Project 6</h5>
-                    </div>
-                    <div class="card card-body">
-                      <a href="#" target=”_blank” class="card-link">Github</a>
-                    </div>
-                  </div>
-                </div>
-
               </div>
             </div>
           </div>
